--- a/src/components/movie/movie.scss
+++ b/src/components/movie/movie.scss
@@ -47,9 +47,9 @@
   text-overflow:ellipsis;
   white-space: nowrap;
 }
-.movie-list-item ion-thumbnail img{
+.movie-list-item .movie-poster img{
   width: 6.4rem;
-  height: 8.6rem;
+  height: 8.8rem;
 }
 .movie-list-item h2{
   font-size: 1.8rem;
@@ -62,21 +62,4 @@
   font-size: 1.4rem !important;
   color: #fff;
   background-color: #F51933;
-}
-
-.reying-movie-list .movie-list-item p:nth-of-type(2){
-  position: relative;
-}
-.reying-movie-list .movie-list-item p:nth-of-type(2) span{
-  font-size: .6rem;
-  padding: 0 .1rem;
-  position: absolute;
-  top: 0.25rem;
-  left: 5rem;
-}
-.comesoon-movie-list .movie-list-item p:nth-of-type(2) span{
-  font-size: 1.4rem;
-  font-weight: 600;
-  color: #F51933;
-  margin: 0 .4rem;
 }
