--- a/src/components/movie/movie.scss
+++ b/src/components/movie/movie.scss
@@ -11,7 +11,7 @@
   border-bottom: 1px solid #eee;
   background-color: #fff;
   position: fixed;
-  top: 4.2rem;
+  top: 0;
   left: 0;
   z-index: 999;
 }
