--- a/src/pages/movie-detail/movie-detail.scss
+++ b/src/pages/movie-detail/movie-detail.scss
@@ -28,6 +28,9 @@
 .watch-btn{
   padding: 0 .8rem;
   margin: 1rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .watch-btn .button-md{
   width: 26%;
@@ -108,20 +111,17 @@
   background-color: #eee;
 }
 .movieDetail-bottom-tabsFixed{
-  color: #fff;
-  background-color: #fff;
-  background-image: url('../../assets/imgs/bg-image-02.jpg');
   position: fixed;
-  top: 0;
-  left: 0;
+  top: auto;
+  left: auto;
   z-index: 999;
 }
 .movieDetail-bottom-tabs .movieDetail-bottom-tab{
   width: 33%;
-  height: 3rem;
+  height: 3.2rem;
   font-size: 1.5rem;
   color: #333;
-  line-height: 38px;
+  line-height: 3.2rem;
   border: 0;
   padding: 0;
   margin: 0 2.4rem;
