--- a/src/pages/personal-center/movie-ticket/movie-ticket.scss
+++ b/src/pages/personal-center/movie-ticket/movie-ticket.scss
@@ -1,14 +1,21 @@
 page-movie-ticket {
 
 }
+.ticketDelSuccess {
+  .toast-message {
+    color: #666;
+  }
+  .toast-wrapper {
+    background: #93E0FF;
+    @extend .box;
+  }
+}
+
 .ticket-content{
   background-color: #eee;
 }
 .ticket-list ion-item{
   border-bottom: .2rem solid #eee;
-}
-.ticket-list ion-item:nth-of-type(1){
-  margin-top: .6rem;
 }
 .ticket-list ion-item .seat{
   width: 2rem;
